--- a/client/src/CSS/scss_partials/home/projects-bugs-shared/list/_listViewSearchFilterSortBar.scss
+++ b/client/src/CSS/scss_partials/home/projects-bugs-shared/list/_listViewSearchFilterSortBar.scss
@@ -27,13 +27,8 @@
 		@include m.stop-text-selection();
 		@include m.vertical-center();
 
-		// Must be border-box because the zoom on the webpage can resize the border otherwise
-		-webkit-box-sizing: border-box;
-		-moz-box-sizing: border-box;
-		box-sizing: border-box;
-
 		left: 30px;
-		border: v.$search-filter-sort-bar-new-item-button-border-width solid black;
+		border: v.$search-top-bar-base-button-border-width solid black;
 		border-radius: v.$search-top-bar-buttton-border-radius;
 		background-color: white;
 		height: v.$search-filter-sort-bar-button-height;
@@ -44,7 +39,7 @@
 	}
 
 	.centering-container__new-item-button--highlighted {
-		border: (v.$search-filter-sort-bar-new-item-button-border-width + 1) solid red;
+		border: (v.$search-top-bar-base-button-border-width + 1) solid red;
 	}
 
 	.centering-container__new-item-button__text {
@@ -127,18 +122,13 @@
 	.filter-area-container__button {
 		@include m.stop-text-selection();
 
-		// Must be border-box because the zoom on the webpage can resize the border otherwise
-		-webkit-box-sizing: border-box;
-		-moz-box-sizing: border-box;
-		box-sizing: border-box;
-
 		// Must be more than filter-area-container__content-dropdown
 		// ...so its top border can be covered to make the two containers look like one
 		z-index: 1;
 		position: absolute;
 		top: 9px;
 		right: 30px;
-		border: 1px solid black;
+		border: v.$search-top-bar-base-button-border-width solid black;
 		border-radius: v.$search-top-bar-buttton-border-radius;
 		background-color: white;
 		height: v.$search-filter-sort-bar-button-height;
@@ -150,18 +140,19 @@
 
 	.filter-area-container__button--clicked {
 		// Negative margin because border resize moves the element
-		margin: -2px -2px 0px;
-		border-width: 3px;
+		margin: -2px 0px 0px;
+		border-width: v.$search-top-bar-clicked-dropdown-button-border-width;
 		border-bottom: none;
 		border-radius: v.$search-top-bar-buttton-border-radius v.$search-top-bar-buttton-border-radius 0 0;
-		height: 48px;
+		height: 45px;
+		width: v.$search-top-bar-filter-button-width - (v.$search-top-bar-clicked-dropdown-button-border-width-difference * 2); 
 	}
 
 	.filter-area-container__button__text {
 		// Used horizontal-center since resize would move the text
 		@include m.horizontal-center();
 		top: 4px;
-		width: v.$search-top-bar-filter-button-width;
+		width: 100%;
 	}
 
 	.filter-area-container__button__text--active {
@@ -171,10 +162,9 @@
 
 	.filter-area-container__content-dropdown {
 		position: absolute;
-		/* top: 41px; */
+
 		top: 52px;
-		// 2px less than button since border resize moves the button
-		right: 28px;
+		right: 30px;
 		border: 3px solid black;
 		border-radius: v.$search-top-bar-buttton-border-radius 0 v.$search-top-bar-buttton-border-radius v.$search-top-bar-buttton-border-radius;
 		background-color: white;
