--- a/client/src/CSS/scss_partials/utils/_variables.scss
+++ b/client/src/CSS/scss_partials/utils/_variables.scss
@@ -158,6 +158,7 @@ $item-container-list-sidebar-border-width: 2px;
 // Border-radius
 //==============
 $base-buttton-border-radius: 10px;
+$navbar-breadcrumb-round-border-radius: 12px;
 $navbar-hamburger-border-radius: 10px;
 $base-sidebar-border-radius: 25px;
 $search-top-bar-buttton-border-radius: 5px;
