--- a/client/src/CSS/scss_partials/utils/_variables.scss
+++ b/client/src/CSS/scss_partials/utils/_variables.scss
@@ -25,14 +25,15 @@ $light-blue-gray: #607c99;
 $blue-gray: #50677f;
 $dark-blue-gray: #215792;
 // Navy blues
-$lighter-navy-blue: #527294;
-$light-navy-blue: #4d6b8b;
+$lighter-navy-blue: #4d6e92;
+  $light-navy-blue: #4d6b8b;
 $navy-blue: #45607e;
 $darker-navy-blue: #3d5774;
+//Text
+$blue-text: #245ba3;
+$teal-text: #2588b3;
 // Links
-/* $blue-link: #005ed8; */
-$blue-link: #22579c;
-$teal-link: #2588b3;
+$blues-link: #005ed8;
 $red-link: #f34242;
 // Reds
 $light-red: #cf8c8c;
