--- a/client/src/CSS/styles.css
+++ b/client/src/CSS/styles.css
@@ -1,4 +1,3 @@
-/* $blue-link: #005ed8; */
 html,
 body {
   width: 100%;
@@ -32,7 +31,7 @@ body .js-set-project-background-color-dark {
 }
 html .js-set-project-background-color-light,
 body .js-set-project-background-color-light {
-  background-color: #4d6b8b !important;
+  background-color: #4d6e92 !important;
 }
 html .js-set-bug-background-color-dark,
 body .js-set-bug-background-color-dark {
@@ -40,11 +39,11 @@ body .js-set-bug-background-color-dark {
 }
 html .js-set-bug-background-color-light,
 body .js-set-bug-background-color-light {
-  background-color: #4d6b8b !important;
+  background-color: #4d6e92 !important;
 }
 html .js-set-project-background-color-with-hover,
 body .js-set-project-background-color-with-hover {
-  background-color: #4d6b8b !important;
+  background-color: #4d6e92 !important;
 }
 html .js-set-project-background-color-with-hover:hover, html .js-set-project-background-color-with-hover:active,
 body .js-set-project-background-color-with-hover:hover,
@@ -53,7 +52,7 @@ body .js-set-project-background-color-with-hover:active {
 }
 html .js-set-bug-background-color-with-hover,
 body .js-set-bug-background-color-with-hover {
-  background-color: #4d6b8b !important;
+  background-color: #4d6e92 !important;
 }
 html .js-set-bug-background-color-with-hover:hover, html .js-set-bug-background-color-with-hover:active,
 body .js-set-bug-background-color-with-hover:hover,
@@ -66,7 +65,7 @@ body .js-set-project-navbar-arrow-color-dark {
 }
 html .js-set-project-navbar-arrow-color-light,
 body .js-set-project-navbar-arrow-color-light {
-  border-left-color: #4d6b8b !important;
+  border-left-color: #4d6e92 !important;
 }
 html .js-set-bug-navbar-arrow-color-dark,
 body .js-set-bug-navbar-arrow-color-dark {
@@ -74,7 +73,7 @@ body .js-set-bug-navbar-arrow-color-dark {
 }
 html .js-set-bug-navbar-arrow-color-light,
 body .js-set-bug-navbar-arrow-color-light {
-  border-left-color: #4d6b8b !important;
+  border-left-color: #4d6e92 !important;
 }
 html .js-set-project-border-color-dark,
 body .js-set-project-border-color-dark {
@@ -82,7 +81,7 @@ body .js-set-project-border-color-dark {
 }
 html .js-set-project-border-color-light,
 body .js-set-project-border-color-light {
-  border-color: #4d6b8b !important;
+  border-color: #4d6e92 !important;
 }
 html .js-set-bug-border-color-dark,
 body .js-set-bug-border-color-dark {
@@ -90,15 +89,15 @@ body .js-set-bug-border-color-dark {
 }
 html .js-set-bug-border-color-light,
 body .js-set-bug-border-color-light {
-  border-color: #4d6b8b !important;
+  border-color: #4d6e92 !important;
 }
 html .js-set-project-text-color,
 body .js-set-project-text-color {
-  color: #22579c !important;
+  color: #245ba3 !important;
 }
 html .js-set-bug-text-color,
 body .js-set-bug-text-color {
-  color: #22579c !important;
+  color: #245ba3 !important;
 }
 html .status-box-background-color-gray,
 html .js-calc-status-box-background-color-gray,
@@ -1083,13 +1082,6 @@ dropdown can overlap all other components
   overflow: hidden;
   text-overflow: ellipsis;
 }
-.item-container-bug-list-component .bug-list-table__data__overflow-container--project-color {
-  color: #22579c;
-}
-.item-container-bug-list-component .bug-list-table__data__overflow-container--bug-color {
-  color: #f34242;
-  color: #22579c;
-}
 .item-container-bug-list-component .bug-list-table__data__overflow-container--completed-color {
   color: #007e00;
 }
@@ -1983,6 +1975,7 @@ dropdown can overlap all other components
   position: relative;
   padding-top: 24px;
   font-size: 140%;
+  color: #1f4d8a;
 }
 .create-item-component .form__errors {
   display: block;
