--- a/client/src/CSS/scss_partials/utils/_variables.scss
+++ b/client/src/CSS/scss_partials/utils/_variables.scss
@@ -87,7 +87,6 @@ $navbar-account-button-width: 130px;
 $navbar-breadcrumb-button-arrow-top-bottom-width: 30px;
 $navbar-breadcrumb-button-arrow-left-width: 20px;
 $navbar-hamburger-button-width: 36px;
-$account-sidebar-width: 350px;
 $edit-account-modal-width: 460px;
 $list-item-search-bar-button-width: $list-item-search-bar-height + 10;
 $search-top-bar-filter-button-width: 90px;
@@ -123,6 +122,7 @@ $top-bar-filter-button-left: $top-bar-sort-button-left +
 //=========
 $register-login-form-input-margin-top: 5px;
 $register-login-form-input-margin-bottom: 5px;
+$account-sidebar-contents-margin-top-bottom: 9px;
 $edit-account-form-input-margin-top: 5px;
 $edit-account-create-item-form-input-margin-bottom: 10px;
 $edit-account-modal-link-margin: 18px;
