--- a/client/src/CSS/styles.css
+++ b/client/src/CSS/styles.css
@@ -657,34 +657,39 @@ dropdown can overlap all other components
   border-right: none;
   border-radius: 25px 0 0 25px;
   background: white;
-  height: 200px;
-  width: 350px;
+  height: 250px;
+  width: 370px;
   text-align: left;
   font-family: Arial, Helvetica, sans-serif;
   overflow-y: auto !important;
   overflow-x: hidden !important;
 }
 .account-sidebar-component .padded-container {
-  padding: 20px 10px 10px 15px;
+  padding: 22px 18px 0px;
 }
 .account-sidebar-component .account-info {
   display: block;
-  margin-bottom: 8px;
-  font-size: 16px;
+  margin-bottom: 9px;
+  font-size: 14px;
   white-space: nowrap;
   overflow: hidden;
   text-overflow: ellipsis;
 }
 .account-sidebar-component .account-info--large-bold {
-  font-size: 19px;
+  font-size: 18px;
   font-weight: bold;
 }
+.account-sidebar-component .dividing-line {
+  margin: 27px 0px;
+  border: solid silver 1px;
+}
 .account-sidebar-component .account-link-container {
-  margin-top: 30px;
+  margin-top: 9px;
 }
 .account-sidebar-component .account-link {
   display: block;
-  margin-bottom: 8px;
+  margin-bottom: 9px;
+  font-size: 15px;
   font-style: bold;
   text-decoration: none;
   cursor: pointer;
