--- a/client/src/CSS/scss_partials/home/account/_accountModal.scss
+++ b/client/src/CSS/scss_partials/home/account/_accountModal.scss
@@ -10,11 +10,12 @@
 		left: 50%;
 		transform: translate(-50%, -50%);
 		border: v.$base-modal-border-width solid black;
+		border-radius: 15px;
 		background-color: white;
 		padding: 30px;
 		height: v.$edit-account-modal-height;
 		width: v.$edit-account-modal-width;
-		text-align: center;
+		//text-align: center;
 		font-family: Arial, Helvetica, sans-serif;
 	}
 
@@ -30,8 +31,10 @@
 
 	.title {
 		position: relative;
+		display: block;
 		padding-top: 8px;
 		font-size: 150%;
+		text-align: center;
 	}
 
 	.form__label {
@@ -80,6 +83,7 @@
 	.form__errors {
 		display: block;
 		color: red;
+		text-align: center;
 	}
 
 	.form__submit {
@@ -125,5 +129,52 @@
 
 	.link-spacer {
 		font-size: 20px;
+	}
+
+	.category-container {
+		position: relative;
+		margin: 20px 0px;
+
+	}
+
+	.category-container--larger-top-margin {
+		margin-top: 40px;
+	}
+
+	.category-container__heading {
+		// Must be higher than category-container__border-container
+		z-index: 1;
+		position: absolute;
+		top: -10px;
+		left: 15px;
+		margin: 0px;
+		background-color: white;
+		padding: 0px 8px;
+		font-size: v.$base-font-size + 3;
+	}
+
+	.category-container__border-container {
+		position: relative;
+		border: solid black 2px;
+		border-radius: 10px;
+		padding: 15px 20px;
+	}
+
+	.category-container__border-container__content-container {
+		margin-top: 15px;
+		height: v.$account-modal-toggle-switch-drop-down-height;
+		
+	}
+
+	.category-container__border-container__content-container--smaller-top-margin {
+		margin-top: 5px;
+	}
+
+	.category-container__border-container__content-container__label {
+		float: left;
+		height: v.$account-modal-toggle-switch-drop-down-height;
+		font-size: v.$base-font-size;
+		vertical-align: middle;
+		line-height: v.$account-modal-toggle-switch-drop-down-height;
 	}
 }
